2010-05-12  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        <rdar://7969718> Incorrect 32-bit codegen for op_jnlesseq
        https://bugs.webkit.org/show_bug.cgi?id=39038

        Correct the use of incorrect comparison operators.

        * jit/JITArithmetic32_64.cpp:
        (JSC::JIT::emit_op_jlesseq):
        (JSC::JIT::emitBinaryDoubleOp):
2010-05-12  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        <rdar://7969718> Incorrect 32-bit codegen for op_jnlesseq
        https://bugs.webkit.org/show_bug.cgi?id=39038

        Add more tests for <=, <, >, and >=.

        * fast/js/comparison-operators-greater-expected.txt:
        * fast/js/comparison-operators-less-expected.txt:
        * fast/js/script-tests/comparison-operators-greater.js:
        * fast/js/script-tests/comparison-operators-less.js:

Canonical link: https://commits.webkit.org/50525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59336 268f45cc-cd09-0410-ab3c-d52691b4dbfc